--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="markers.js"></script>
 <script type="text/javascript" src="regions.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script type="text/javascript" src="controls.js"></script>
 <script type="text/javascript">
 	var config = {
@@ -249,7 +249,7 @@
 	var markersInit = false;
 
 	function initMarkers() {
-		if ((markersInit) || (!checkURL(dir + "markers.js"))) { return; }
+		if ((markersInit) || (!checkURL(dir + "/markers.js"))) { return; }
 		
 		markersInit = true;
 		
@@ -293,7 +293,7 @@
 	var regionsInit = false;
 	
 	function initRegions() {
-		if ((regionsInit) || (!checkURL(dir + "regions.js"))) { return; }
+		if ((regionsInit) || (!checkURL(dir + "/regions.js"))) { return; }
 		
 		regionsInit = true;
 		
@@ -387,7 +387,7 @@
 			if (config.playerFaces == true) {
 				// Set player icon
 				iconURL = new google.maps.MarkerImage(
-					dir + 'player-icon.php?player=' + item.msg,
+					dir + '/player-icon.php?player=' + item.msg,
 					new google.maps.Size(24, 24),
 					new google.maps.Point(0,0),
 					new google.maps.Point(-7 , 17));
